--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			</div>
 		</div>
 		<a class="My_works" href="#main-id">Мои работы</a>
-		<img class="img-line" src="img/_3x.png">
+		<img class="img-line" src="img/line.png">
 	</header>
 	<main id="main-id" class="portfolio">
 		<img class="img-line__top" src="img/3x.png">
