--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 					<div class="portfolio-works__title">
 						<h2>Гвлерея городов</h2>
 					</div>
-				
+					<p class="portfolio-works__dev javaScript">JavaScript</p>
 				</a>
 				<a class="portfolio-works__item" href="arkstroi/index.html"">
 					<img src="img/works/SURF.JPG">
