--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 			</div>
 		</div>
 		<a class="My_works" href="#main-id">Мои работы</a>
-		<img class="img-line" src="img/line.png">
-	</header>
+		
+	</header><!--
 	<main id="main-id" class="portfolio">
-		<img class="img-line__top" src="img/3x.png">
+		
 		<div class="main__wrapper">
 			<div class="portfolio-title">
 				Портфолио
@@ -129,7 +129,7 @@
 				
 			</div>
 		</div>
-	</main>
+	</main>-->
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
