--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<h2 class="subheading">вёрстка сайтов</h2>
 				<p>Всем привет!) Я веб-разработчик!</p><p> Могу сделать полноценный сайт любой сложности
 				по дизайн-макету. </p>
-				<p>Я Вконтакте:</p>
+				<p>Я в Вконтакте:</p>
 				<div class="social-link">
 					<a class="vk-res" href="https://vk.com/kamikadze00007" target="_blank"><img width="20"src ="img/vk.png"></a>
 					<a class="VK-button" href="https://vk.com/kamikadze00007" target="_blank">Вконтакте</a>
@@ -30,7 +30,7 @@
 		</div>
 		<a class="My_works" href="#main-id">Мои работы</a>
 		
-	</header><!--
+	</header>
 	<main id="main-id" class="portfolio">
 		
 		<div class="main__wrapper">
@@ -129,7 +129,7 @@
 				
 			</div>
 		</div>
-	</main>-->
+	</main>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
