--- a/index.html
+++ b/index.html
@@ -108,7 +108,14 @@
 				<a class="portfolio-works__item" href="gallery/index.html"">
 					<img src="img/works/Sity.JPG">
 					<div class="portfolio-works__title">
-						<h2>Гвлерея городов</h2>
+						<h2>Галерея городов</h2>
+					</div>
+					<p class="portfolio-works__dev javaScript">JavaScript</p>
+				</a>
+				<a class="portfolio-works__item" href="circles/index.html"">
+					<img src="img/works/Circles.JPG">
+					<div class="portfolio-works__title">
+						<h2>Игра Aim Training Circles</h2>
 					</div>
 					<p class="portfolio-works__dev javaScript">JavaScript</p>
 				</a>
