--- a/circles/index.html
+++ b/circles/index.html
@@ -41,7 +41,7 @@
       </ul>
     </div>
 
-    <div class="screen">
+    <div class="screen scroll">
       <h3>Осталось <span id="time">00:00</span>
       </h3>
       <div class="board" id="board"></div>
