--- a/circles/index.html
+++ b/circles/index.html
@@ -7,7 +7,7 @@
     <title>Aim Training | Проект 5</title>
   </head>
   <body>
-    <div class="screen">
+    <div class="screen up">
       <h1>Aim Training Circles</h1>
       <p>Нажми настолько кружков, насколько хватит времени</p>
       <a href="#" class="start" id="start">Начать игру</a>
