--- a/circles/index.html
+++ b/circles/index.html
@@ -45,7 +45,7 @@
       <h3>Осталось <span id="time">00:00</span>
       </h3>
       <div class="board" id="board"></div>
-      
+      <button class="newGame">Новая игра</button>
     </div>
 
     <script src="app.js"></script>
