--- a/index.html
+++ b/index.html
@@ -119,6 +119,21 @@
 					</div>
 					<p class="portfolio-works__dev javaScript">JavaScript</p>
 				</a>
+				<a class="portfolio-works__item" href="crestiky-noliky/index.html"">
+					<img src="img/works/game.JPG">
+					<div class="portfolio-works__title">
+						<h2>Игра Крестики-нолики</h2>
+					</div>
+					<p class="portfolio-works__dev javaScript">JavaScript</p>
+				</a>
+				
+				<a class="portfolio-works__item" href="calculator/index.html"">
+					<img src="img/works/calculator.JPG">
+					<div class="portfolio-works__title">
+						<h2>Мини-калькулятор</h2>
+					</div>
+					<p class="portfolio-works__dev javaScript">JavaScript</p>
+				</a>
 				<a class="portfolio-works__item" href="arkstroi/index.html"">
 					<img src="img/works/SURF.JPG">
 					<div class="portfolio-works__title">
