--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<header class="header">
 		<div class="card">
 			<div class="card-photo">
-				<img class="card-photo-img" src="img/IAM.jpg" alt="">
+				<img class="card-photo-img" src="img/works/i2.JPG" alt="">
 			</div>
 			<div class="card-text">
 				<div class="badge">WEB-разработчик</div>
@@ -29,8 +29,18 @@
 			</div>
 		</div>
 		<a class="My_works" href="#main-id">Мои работы</a>
-		
+		<div class="modal__photo hide">
+			<div class="modal__photo-wrapper">
+				<div class="modal__photo-inner">
+					<img src="img/iModal.jpg">
+					<div class="close">
+						X
+					</div>
+				</div>
+			</div>
+		</div>
 	</header>
+	
 	<main id="main-id" class="portfolio">
 		
 		<div class="main__wrapper">
