--- a/studio/index.html
+++ b/studio/index.html
@@ -21,21 +21,21 @@
 					<p>которые работают и приносят прибыль.</p>
 				</div>
 			</div>
-			<div class="header-bottom">
+			<div class="header-bottom"><!--518 345 218-->
 				<div class="header-bottom__left">
-					<p class="numbers dop">518</p>
+					<p class="numbers dop score--one">0</p>
 					<p class="header-bottom__info">оказанных услуг</p>
 					<img  src = "img/frame.png" alt = "">
 					<img  id ="img_mark-one" src = "img/star.png" alt = "">
 				</div>
 				<div class="header-bottom__center">
-					<p class="numbers dop">345</p>
+					<p class="numbers dop score--two">0</p>
 					<p class="header-bottom__info">проектов</p>
 					<img  src = "img/frame.png" alt = "">
 					<img  id ="img_mark-two" src = "img/tasks.png" alt = "">
 				</div>
 				<div class="header-bottom__right">
-					<p class="numbers">218</p>
+					<p class="numbers score--three">0</p>
 					<p class="header-bottom__info">постоянных клиентов</p>
 					<img  src = "img/frame.png" alt = "">
 					<img  id ="img_mark-three" src = "img/diamond.png" alt = "">
@@ -431,5 +431,7 @@
 		</div>
 		<div class="podval"></div>
 	</footer>
+
+	<script src="js/main.js"></script>
 </body>
 </html>
