--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 					</div>
 					<p class="portfolio-works__dev">В РАЗРАБОТКЕ</p>
 				</a>
-				
+				<a href="tenloc/index.html">Test</a>
 			</div>
 		</div>
 	</main>
