--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width-device-width, initial-scale=1.0">
-	<title>My cutaway</title>
+	<title>Илья Щербаков | Портфолио - визитка</title>
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Nunito|Ubuntu|PT+Sans&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
