update in the crosses_zeroes

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 					</div>
 					<p class="portfolio-works__dev javaScript">JavaScript</p>
 				</a>
-				<a class="portfolio-works__item" href="crestiky-noliky/index.html" target="_blank">
+				<a class="portfolio-works__item" href="crosses_zeroes/index.html" target="_blank">
 					<img src="img/works/game.JPG">
 					<div class="portfolio-works__title">
 						<h2>Игра Крестики-нолики</h2>
