add logic collisions and score

--- a/snake/index.html
+++ b/snake/index.html
@@ -31,6 +31,24 @@
             <div class="snake__segment snake__body"> </div>
             <div class="snake__segment snake__body"> </div>
         </div>
+        <div class="fence__inner">
+          <div class="fence__item">
+            <img src="images/fence.png" alt="">
+          </div>
+          <div class="fence__item">
+            <img src="images/fence.png" alt="">
+          </div>
+          <div class="fence__item">
+            <img src="images/fence.png" alt="">
+          </div>
+          <div class="fence__item">
+            <img src="images/fence.png" alt="">
+          </div>
+          <div class="fence__item">
+            <img src="images/fence.png" alt="">
+          </div>
+          
+        </div>
       </div>
     </div>
   </section>
