add logic of collision border up

--- a/snake/index.html
+++ b/snake/index.html
@@ -19,8 +19,11 @@
     </div>
     <div class="area">
       <div class="area-wrapper">
+        <div class="river__up">
+          <img src="images/riverUP.png" alt="">
+        </div>
         <div class="snake">
-        <div class="snake__headWrapper">
+          <div class="snake__headWrapper">
             
             <div class="snake__head snake__body"><div class="eya"></div><div class="eya"></div></div>
           </div>
