finished develop game

--- a/snake/index.html
+++ b/snake/index.html
@@ -52,6 +52,26 @@
           </div>
           
         </div>
+        <div class="bridge__inner">
+          <div class="bridge__item">
+            <img src="images/river.png" alt="">
+          </div>
+          <div class="bridge__item">
+            <img src="images/river.png" alt="">
+          </div>
+          <div class="bridge__item">
+            <img src="images/river.png" alt="">
+          </div>
+          <div class="bridge__item">
+            <img src="images/river.png" alt="">
+          </div>
+          <div class="bridge__item">
+            <img src="images/river.png" alt="">
+          </div>
+          <div class="bridge__item">
+            <img src="images/river.png" alt="">
+          </div>
+        </div>
       </div>
     </div>
   </section>
