--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<header class="header">
 		<div class="card">
 			<div class="card-photo">
-				<img class="card-photo-img" src="img/works/i2.JPG" alt="">
+				<img class="card-photo-img" src="img/works/eN1wIC78M-8.jpg" alt="">
 			</div>
 			<div class="card-text">
 				<div class="badge">WEB-разработчик</div>
