--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div class="badge">WEB-разработчик</div>
 				<h1 class="heading">Илья Щербаков</h1>
 				<h2 class="subheading">вёрстка сайтов</h2>
-				<p>Всем привет!) Я веб-разработчик!</p><p> Могу сделать полноценный сайт любой сложности
+				<p>Всем привет!) Я HYPERZЯРазметчик!</p><p> Могу сделать полноценный сайт любой сложности
 				по дизайн-макету. </p>
 				<p>Я в Вконтакте:</p>
 				<div class="social-link">
