--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 	<header class="header">
 		<div class="card">
 			<div class="card-photo">
-				<img class="card-photo-img" src="img/works/eN1wIC78M-8.jpg" alt="">
+				<img class="card-photo-img" src="img/AVA.jpg" alt="">
 			</div>
 			<div class="card-text">
-				<div class="badge">WEB-разработчик</div>
+				<div class="badge">FRONTEND-разработчик</div>
 				<h1 class="heading">Илья Щербаков</h1>
 				<h2 class="subheading">вёрстка сайтов</h2>
 				<p>Всем привет!) Я HYPERtextРазметчик!</p><p> Могу сделать полноценный сайт любой сложности
@@ -32,7 +32,7 @@
 		<div class="modal__photo hide">
 			<div class="modal__photo-wrapper">
 				<div class="modal__photo-inner">
-					<img src="img/iModal.jpg">
+					<img src="img/AVAmodal.jpg">
 					<div class="close">
 						X
 					</div>
